# geostradamus

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml
data/: combined.csv
notebooks/: Weather_Map_Example.html  Weather_Map_Example.ipynb
src/: data_models.py  geostradamus.py  kernel.py  smoother.py  time_series.py  utils.py
